# opengl-backup

./: .gitattributes  .gitignore  README.md  install.py  meson.build  setup.py
include/: camera.hpp  light.hpp  mesh.hpp  shader.hpp  texture.hpp  window.hpp
shaders/: frag.glsl  vert.glsl
src/: camera.cpp  light.cpp  main.cpp  mesh.cpp  shader.cpp  texture.cpp  window.cpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/stb_image/: meson.build
